# puzzle_quest_3

./: Cargo.toml
assets/: asscher.glb  asscher_shattered.glb  baguette.glb  baguette_shattered.glb  equipment.glb  equipment_shattered.glb  gems.blend  gems.blend1  marquise.glb  marquise_shattered.glb  pear.glb  pear_shattered.glb  round.glb  round_shattered.glb  skull.glb  skull_shattered.glb  trillion.glb  trillion_shattered.glb
src/: assets.rs  main.rs
