[package]
name = "puzzle_quest_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7.0"
heron = { version = "3.0.0", features = ["3d", "collision-from-mesh"] }
bevy_hanabi = "0.2.0"
bevy_egui = "0.13.0"
bevy-inspector-egui = "0.10.0"
strum = { version = "0.24.0", features = ["derive"] }
bevy_match3 = "0.0.2"

[profile.dev]
opt-level = 1
incremental = true

[profile.dev.package."*"]
opt-level = 3